<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application details -->
	<string name="app_name">TeamWin</string>
	
	<!-- Labels for menu items, buttons etc. -->
	<string name="title_contextmenu_whiteboards">White Boards</string>
	<string name="title_dialog_change_title">Change Title</string>
	<string name="title_dialog_delete">Delete</string>
	
	<string name="label_remoteurl_into">View white boards at:</string>
	<string name="label_remoteurl">http:/%1$s:%2$s</string>
	<string name="label_stopping_whiteboard">Whiteboard server stopped</string>
	<string name="label_createWhiteBoard">Create White Board</string>
	<string name="label_defaultWhiteBoardTitle">Untitled</string>
	
	<string name="menu_help">Help</string>
	<string name="menu_save">Save</string>
	<string name="menu_load">Load</string>
	<string name="menu_stroke_width">Width</string>
	<string name="menu_color">Color</string>
	<string name="menu_undo">Undo</string>
	<string name="menu_clear">Clear</string>
	<string name="menu_eraser">Eraser</string>
	<string name="menu_zoom">Zoom</string>
	
	<string name="contextmenu_change_title">Change Title</string>
	<string name="contextmenu_delete_whiteboard">Delete</string>
	
	<string name="button_ok">Ok</string>
	<string name="button_cancel">Cancel</string>
	
	<!-- Info, confirmation and error messages. -->
	<string name="error_remoteurl">Error getting remote URL</string>
	<string name="error_noExternalStorage">External storage is not available.</string>
	<string name="error_savingWhiteBoard">Failed to save the white board.</string>
	
	<string name="message_nowhiteboards">No saved white boards</string>
	
	<string name="confirm_deleteWhiteBoard">Are you sure you want to delete this white board?</string>
</resources>
